--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background: lightblue;
+    background: rgb(197, 65, 92);
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
@@ -9,14 +9,19 @@ body{
     display:flex;
     padding:10px;
     margin:10px;
-    background:lightgray;
+    background:bisque;
 
 }
 .assignment img {
     width:200px;
-    padding:10px;
+    border: 2px solid olive;
+    margin-right:20px;
 }
 h1{
-    color: darkcyan;
+    color: coral;
     text-align:center;
+}
+a{
+    text-decoration:none;
+    color: coral;
 }
